Incorporate Kris's feedback

--- a/management/templates/management/base.html
+++ b/management/templates/management/base.html
@@ -12,8 +12,14 @@
         .panel-default {
             display: block;
         }
+        caption {
+            color: #000;
+            font-weight: bold;
+        }
         .show-links {
-            margin-bottom: 15px;
+            color: #777;
+            font-weight: normal;
+            font-size: 12px;
         }
 
     </style>
