--- a/management/templates/management/cohort_list.html
+++ b/management/templates/management/cohort_list.html
@@ -1,30 +1,23 @@
 {% extends 'management/base.html' %}
 
 {% block management %}
-    <a class="btn btn-default btn-sm" href="{% url 'management:cohort-list-download' %}">
-        <span class="glyphicon glyphicon-download" aria-hidden="true"></span>
-        Download TLA_Cohort_USELAB.dat
-    </a>
-    <a class="btn btn-default btn-sm" href="{% url 'management:cohort-detail-download' %}">
-        <span class="glyphicon glyphicon-download" aria-hidden="true"></span>
-        Download TLA_StudentCohortMentor_USELAB.dat
-    </a>
-    <hr/>
-
-    {% if show == "active" %}
-        <a href="{% url 'management:cohort-list' %}?show=all" class="btn btn-info btn-sm show-links">
-            Show all cohorts
-        </a>
-    {% endif %}
-
-    {% if show == "all" %}
-        <a href="{% url 'management:cohort-list' %}" class="btn btn-info btn-sm show-links">
-            Show only active cohorts
-        </a>
-    {% endif %}
 
     <div id="resultsTable">
         <table class="table table-bordered">
+            <caption>
+                {% if show == "active" %}
+                    Active Cohorts
+                    <a href="{% url 'management:cohort-list' %}?show=all" class="show-links">
+                        Show all cohorts
+                    </a>
+                {% endif %}
+                {% if show == "all" %}
+                    All Cohorts
+                    <a href="{% url 'management:cohort-list' %}" class="show-links">
+                        Show only active cohorts
+                    </a>
+                {% endif %}
+            </caption>
             <thead>
                 <tr>
                     <th>Code</th>
@@ -38,7 +31,11 @@
                     <tr>
                         <td>
                             <a href="{% url 'management:cohort-members' cohort.code %}">
-                                {{ cohort.code }}
+                                {% if cohort.active %}
+                                    {{ cohort.code }}
+                                {% else %}
+                                    <s>{{ cohort.code }}</s>
+                                {% endif %}
                             </a>
                         </td>
                         <td>{{ cohort.description }}</td>
@@ -128,6 +125,14 @@
         <a href="{% url 'management:add-cohort' %}" class="btn btn-info">
             <span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span>
             Add Cohort
+        </a>
+        <a class="btn btn-default btn-sm" href="{% url 'management:cohort-list-download' %}">
+            <span class="glyphicon glyphicon-download" aria-hidden="true"></span>
+            Download TLA_Cohort_USELAB.dat
+        </a>
+        <a class="btn btn-default btn-sm" href="{% url 'management:cohort-detail-download' %}">
+            <span class="glyphicon glyphicon-download" aria-hidden="true"></span>
+            Download TLA_StudentCohortMentor_USELAB.dat
         </a>
         {% include 'management/pagination.html' %}
     </div>
