Change 'Admin' in dropdown to 'Manage'

--- a/student_explorer/templates/student_explorer/index.html
+++ b/student_explorer/templates/student_explorer/index.html
@@ -62,7 +62,7 @@
                                     </li>
                                     {% if user.is_superuser %}
                                         <li>
-                                            <a href="{% url 'admin:index' %}">Admin</a>
+                                            <a href="{% url 'management:index' %}">Manage</a>
                                         </li>
                                     {% endif %}
                                     <li role="separator" class="divider"></li>
