--- a/student_explorer/templates/student_explorer/index.html
+++ b/student_explorer/templates/student_explorer/index.html
@@ -2,6 +2,14 @@
 <html lang="en" class="no-js">
 
     <head>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-111099444-1"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+          gtag('config', 'UA-111099444-1');
+        </script>
         {% load static from staticfiles %}
         <meta charset="utf-8">
         <title>Student Explorer</title>
@@ -124,7 +132,7 @@
                     </a>
                 </div>
                 <div class="container-fluid">
-                    <p class="main-color-white">Student Explorer (<a href="{% url 'about' %}" style="text-decoration: none; color: inherit;">2.3.3</a>)
+                    <p class="main-color-white">Student Explorer (<a href="{% url 'about' %}" style="text-decoration: none; color: inherit;">2.3.4</a>)
                         <span class="footer-block">Copyright &copy; 2015 - 2017</span>
                         <span class="footer-block">The Regents of the University of Michigan</span>
                     </p>
@@ -132,23 +140,6 @@
             </div>
         </div>
 
-        <script>
-            (function (i, s, o, g, r, a, m) {
-                i['GoogleAnalyticsObject'] = r;
-                i[r] = i[r] || function () {
-                    (i[r].q = i[r].q || []).push(arguments)
-                },
-                i[r].l = 1 * new Date();
-                a = s.createElement(o),
-                m = s.getElementsByTagName(o)[0];
-                a.async = 1;
-                a.src = g;
-                m.parentNode.insertBefore(a, m)
-            })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
-
-            ga('create', 'UA-67092539-3', 'auto');
-            ga('send', 'pageview');
-        </script>
     </body>
 
 </html>
