--- a/student_explorer/templates/student_explorer/index.html
+++ b/student_explorer/templates/student_explorer/index.html
@@ -136,7 +136,7 @@
                     <p class="main-color-white">Student Explorer (<a href="{% url 'about' %}" style="text-decoration: none; color: inherit;">2.3.4</a>)
                         <span class="footer-block">Copyright &copy; 2015 - 2017</span>
                         <span style="text-align:center;">The Regents of the University of Michigan</span>
-                        <span style="float:right">Updated:11/29/2018</span>
+                        <span style="float:right">Last updated on {{last_updated|date:"m/d/Y P T"}}</span>
                     </p>
                  </div>
                </div>
