--- a/student_explorer/templates/student_explorer/index.html
+++ b/student_explorer/templates/student_explorer/index.html
@@ -120,26 +120,23 @@
                 </div>
             {% endif %}
             {% block content %}{% endblock %}
-            <div class="footer">
+            <footer>
                 <div class="container-fluid">
-                  <div class='feedback center-align visible-md visible-lg'>
-                      <img src="{% static 'seumich/images/feedback.svg' %}" alt="Feedback icon"></img>Help us improve Student Explorer by
-                      <a href="{% url 'feedback:feedback' %}">submitting your feedback</a>
-                  </div>
-                  <div class='feedback center-align visible-sm visible-xs'>
-                      <a href="{% url 'feedback:feedback' %}">
-                          <button type="button" class="btn btn-sm btn-default">
-                              <img src="{% static 'seumich/images/feedback.svg' %}" alt="Feedback icon"></img>
-                              Submit Feedback</button>
-                  </div>
-                  <div>
-                    <p class="main-color-white">Student Explorer (<a href="{% url 'about' %}" style="text-decoration: none; color: inherit;">2.3.4</a>)
+                <div class='feedback center-align'>
+                    <a href="{% url 'feedback:feedback' %}">
+                        <button type="button" class="btn btn-sm btn-default">
+                            <img src="{% static 'seumich/images/feedback.svg' %}" alt="Feedback icon"></img>
+                            Submit Feedback</button>
+                    </a>
+                </div>
+                <div class="row main-color-white">
+                    <div class="col-xs-6 text-left">Student Explorer (<a href="{% url 'about' %}" style="text-decoration: none; color: inherit;">2.3.4</a>)
                         <span class="footer-block">Copyright &copy; 2015 - 2017</span>
-                        <span style="text-align:center;">The Regents of the University of Michigan</span>
-                        <span style="float:right">Last updated on {{last_updated|date:"m/d/Y P T"}}</span>
-                    </p>
-                 </div>
-               </div>
+                        <span class="footer-block">The Regents of the University of Michigan</span>
+                    </div>
+                    <div class="col-xs-6 text-right">Last updated on {{last_updated|date:"m/d/Y P T"}}</div>
+                </div>
+            </footer>
         </div>
 
     </body>
