issue_41 fix issue of redundant quote char

--- a/seumich/templates/seumich/student_class_site_detail.html
+++ b/seumich/templates/seumich/student_class_site_detail.html
@@ -83,7 +83,7 @@
                         <div>
                             Data Source:
                             <span class="label label-primary">{{classSite.source_system}}</span>
-                            <br/> <a href="{{class_site_canvas_url}}" target=""_blank">Observe student in Canvas site</a>
+                            <br/> <a href="{{class_site_canvas_url}}" target="_blank">Observe student in Canvas site</a>
                         </div>
                     </div>
                 </div>
