issue_38: report UDW data updated time and schema version

--- a/student_explorer/templates/student_explorer/index.html
+++ b/student_explorer/templates/student_explorer/index.html
@@ -134,7 +134,7 @@
                         <span class="footer-block">Copyright &copy; 2015 - 2017</span>
                         <span class="footer-block">The Regents of the University of Michigan</span>
                     </div>
-                    <div class="col-xs-6 text-right">Last updated on {{last_updated|date:"m/d/Y P T"}}</div>
+                    <div class="col-xs-6 text-right">{{ last_updated }}</div>
                 </div>
             </footer>
         </div>
