--- a/student_explorer/templates/student_explorer/index.html
+++ b/student_explorer/templates/student_explorer/index.html
@@ -43,7 +43,9 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
+                <a href="{% url 'seumich:index' %}">
                     <span class="main-color-white main-navbar-brand navbar-brand"><img id="student-explorer-logo" src="/static/seumich/images/se-logo.svg" alt="student explorer logo">Student Explorer</span>
+                </a>
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     {% url 'seumich:advisor' advisor.username as mystudentsurl%}
