#68 use font awesome for the external icon

--- a/student_explorer/templates/student_explorer/index.html
+++ b/student_explorer/templates/student_explorer/index.html
@@ -60,7 +60,7 @@
                         <li>
                             <a href="https://documentation.its.umich.edu/node/831" target="_blank">
                                 Resources & Support
-                                <img src="{% static 'seumich/images/external-link.svg' %}" alt="External Help Doc icon" width="25px" hspace="3"/>
+                                <i class="fa fa-external-link" aria-hidden="true" width="25px" hspace="3" alt="External Help Doc Icon"></i>
                             </a>
                         </li>
                     </ul>
