issue_38 update footer text

--- a/student_explorer/templates/student_explorer/index.html
+++ b/student_explorer/templates/student_explorer/index.html
@@ -142,7 +142,11 @@
                         <span class="footer-block">Copyright &copy; 2015 - 2017</span>
                         <span class="footer-block">The Regents of the University of Michigan</span>
                     </div>
-                    <div class="col-xs-6 text-right">{{ last_updated }}</div>
+                    <div class="col-xs-6 text-right">
+                        {{ last_updated_1 }}
+                        <br>
+                        {{ last_updated_2 }}
+                    </div>
                 </div>
             </footer>
         </div>
