--- a/student_explorer/templates/student_explorer/index.html
+++ b/student_explorer/templates/student_explorer/index.html
@@ -139,13 +139,11 @@
                 </div>
                 <div class="row main-color-white">
                     <div class="col-xs-6 text-left">Student Explorer (<a href="{% url 'about' %}" style="text-decoration: none; color: inherit;">2.3.4</a>)
-                        <span class="footer-block">Copyright &copy; 2015 - 2017</span>
+                        <span class="footer-block">Copyright &copy; 2015 - 2019</span>
                         <span class="footer-block">The Regents of the University of Michigan</span>
                     </div>
                     <div class="col-xs-6 text-right">
-                        {{ last_updated_1 }}
-                        <br>
-                        {{ last_updated_2 }}
+                        Data last updated from Canvas: {{ data_time|date:"m/d/Y P T"}} | Schema: {{data_schema}}
                     </div>
                 </div>
             </footer>
