issue #84 show OpenShift build information inside the /about page

--- a/student_explorer/templates/student_explorer/about.html
+++ b/student_explorer/templates/student_explorer/about.html
@@ -8,5 +8,11 @@
         <p>Build Number:
             <strong>{{ build_number }}</strong>
         </p>
+        <p>Build Commit:
+            <strong>{{ build_commit }}</strong>
+        </p>
+        <p>Build Reference:
+            <strong>{{ build_reference }}</strong>
+        </p>
     </div>
 {% endblock %}
