--- a/student_explorer/templates/student_explorer/index.html
+++ b/student_explorer/templates/student_explorer/index.html
@@ -138,7 +138,7 @@
                     </a>
                 </div>
                 <div class="row main-color-white">
-                    <div class="col-xs-6 text-left">Student Explorer (<a href="{% url 'about' %}" style="text-decoration: none; color: inherit;">2.5.1</a>)
+                    <div class="col-xs-6 text-left"><a href="{% url 'about' %}" style="text-decoration: none; color: inherit;">Student Explorer </a>
                         <span class="footer-block">Copyright &copy; 2015 - 2019</span>
                         <span class="footer-block">The Regents of the University of Michigan</span>
                     </div>
