issue #84 added the changes in views.py

--- a/student_explorer/templates/student_explorer/about.html
+++ b/student_explorer/templates/student_explorer/about.html
@@ -5,8 +5,8 @@
         <h1 class="sub-header">About Student Explorer</h1>
         <p>Student Explorer is an early warning system that leverages Learning Management System data to help academic advisors identify at-risk students. (<a href="http://digitaleducation.umich.edu/dei/student-explorer/" target="_blank">more info</a>)</p>
         <hr/>
-        <p>Build Number:
-            <strong>{{ build_number }}</strong>
+        <p>Build Name:
+            <strong>{{ build_name }}</strong>
         </p>
         <p>Build Commit:
             <strong>{{ build_commit }}</strong>
