--- a/student_explorer/templates/403.html
+++ b/student_explorer/templates/403.html
@@ -7,6 +7,6 @@
 {% block content %}
 <div class="container">
     <h1>Permission Denied</h1>
-    <p>You do not currently have access to the Student Explorer, an early-warning tool that uses course and assignment data from Canvas to help advisors, coaches, and mentors identify at-risk students and facilitate outreach to these students. For more information about the Student Explorer including how to get access and who to contact for assistance, please see the <a href="https://documentation.its.umich.edu/node/831">Student Explorer Documentation.</a></p>
+    <p>You do not currently have access to Student Explorer, an early-warning tool that uses course and assignment data from Canvas to help advisors, coaches, and mentors identify at-risk students and facilitate outreach to these students. For more information about Student Explorer including how to get access and who to contact for assistance, please see the <a href="https://documentation.its.umich.edu/node/831">Student Explorer Documentation.</a></p>
 </div>
 {% endblock %}
