Issue #99 remove CTools reference

--- a/seumich/templates/seumich/student_class_site_detail.html
+++ b/seumich/templates/seumich/student_class_site_detail.html
@@ -137,7 +137,7 @@
                     </script>
 
                     <h4>Weekly Activity</h4>
-                    <small class="note">This graph shows the percentile ranking of the student's page views (Canvas) or log-ins (CTools).</small>
+                    <small class="note">This graph shows the percentile ranking of the student's page views in Canvas as compared to other students in the course (note that page view data is not available for data sourced from the Math Department).</small>
                     <div id="chart2" style="height: 100%;">
                         <svg></svg>
                     </div>
