--- a/student_explorer/templates/student_explorer/index.html
+++ b/student_explorer/templates/student_explorer/index.html
@@ -24,11 +24,14 @@
         <link rel="stylesheet" type="text/css" href="{% static 'nvd3/src/nv.d3.css' %}">
         <link rel="stylesheet" type="text/css" href="{% static 'components-font-awesome/css/font-awesome.css' %}">
         <link rel="stylesheet" type="text/css" href="{% static 'seumich/styles/main.css' %}">
+        <link rel="stylesheet" type="text/css" href="{% static 'tablesorter/theme.bootstrap_3.css' %}">
+        <link rel="stylesheet" type="text/css" href="{% static 'tablesorter/jquery.tablesorter.pager.min.css' %}">
         <script src="{% static 'jquery/dist/jquery.js' %}"></script>
         <script src="{% static 'bootstrap/dist/js/bootstrap.js' %}"></script>
         <script src="{% static 'd3/d3.js' %}"></script>
         <script src="{% static 'nvd3/nv.d3.js' %}"></script>
-        <script src="{% static 'tablesorter/jquery.tablesorter.js' %}"></script>
+        <script src="{% static 'tablesorter/jquery.tablesorter.combined.min.js' %}"></script>
+        <script src="{% static 'tablesorter/jquery.tablesorter.pager.min.js' %}"></script>
         <script src="{% static 'seumich/index.js' %}"></script>
         {% block head %}{% endblock %}
     </head>
