Adding some fixes based on feedback

--- a/seumich/templates/seumich/student_list_partial.html
+++ b/seumich/templates/seumich/student_list_partial.html
@@ -19,7 +19,7 @@
                 <th scope="col" class="hide-small">
                     <strong class="table-column-name">Student ID</strong>
                 </th>
-                <th scope="col" class="hide-small" data-sorter="false">
+                <th scope="col" class="hide-small" data-sorter="false" data-filter="false">
                     <strong class="table-column-name">Status</strong>
                 </th>
                 <th scope="col" class="hide-small" data-sorter="false">
