Fixes #114 - advisors list doesn't have a pagination

--- a/seumich/templates/seumich/advisor_list.html
+++ b/seumich/templates/seumich/advisor_list.html
@@ -31,6 +31,9 @@
                         </tr>
                     {% endfor %}
                 </tbody>
+                <tfoot>
+                    {% include 'seumich/ts_pager.html' %}
+                </tfoot>
             </table>
         </div>
     </div>
