Adding colspan specific values, removing some old code that shouldn't have been there for docker-compose in debugging

--- a/seumich/templates/seumich/advisor_list.html
+++ b/seumich/templates/seumich/advisor_list.html
@@ -43,7 +43,7 @@
                     {% endfor %}
                 </tbody>
                 <tfoot>
-                    {% include 'seumich/ts_pager.html' %}
+                    {% include 'seumich/ts_pager.html' with colspan="3" %}
                 </tfoot>
             </table>
         </div>
