--- a/seumich/templates/seumich/student_list_partial.html
+++ b/seumich/templates/seumich/student_list_partial.html
@@ -55,7 +55,7 @@
                 </th>
             </tr>
             <tr>
-                {% include 'seumich/ts_pager.html' %}
+                {% include 'seumich/ts_pager.html' with colspan="6" %}
             </tr>
         </tfoot>
         <tbody>
