--- a/seumich/templates/seumich/ts_pager.html
+++ b/seumich/templates/seumich/ts_pager.html
@@ -1,4 +1,4 @@
-<th colspan="4" class="ts-pager form-inline">
+<th colspan="{{colspan|default:"1"}}" class="ts-pager form-inline">
     <div class="btn-group btn-group-sm" role="group">
         <button type="button" class="btn btn-default first"><span
                 class="glyphicon glyphicon-step-backward"></span></button>
