--- a/seumich/static/seumich/styles/_semixins.scss
+++ b/seumich/static/seumich/styles/_semixins.scss
@@ -4,7 +4,7 @@ $chart-width: 1150px;
     position: static;
     left: auto;
     width: auto;
-    margin: -$primary-margin -15px 0;
+    margin: 0px -15px 0;
 }
 @mixin desktop {
      @media screen and (min-width: #{$tablet-width + 1}){
