Adding missing formatting to About page; correct active behavior of About navbar link

--- a/student_explorer/templates/student_explorer/about.html
+++ b/student_explorer/templates/student_explorer/about.html
@@ -8,19 +8,19 @@
             intelligence that assists academic advisors in identifying students at risk of academic jeopardy in order to
             facilitate outreach to these students. The tool helps advisors create timely interventions to direct
             students toward resources or behavioral changes that help facilitate future student success. Student
-            Explorer is available to all academic advisors at the U-M Ann Arbor campus upon request for access and
-            includes information about all students on the Ann Arbor campus, including graduate students. For more
-            information about how Student Explorer works and how to use it, please refer to the
+            Explorer is available to <b>all academic advisors at the U-M Ann Arbor campus upon request for access</b>
+            and includes information about <b>all students on the Ann Arbor campus, including graduate students.</b> For
+            more information about how Student Explorer works and how to use it, please refer to the
             <a href="https://documentation.its.umich.edu/node/831">Student Explorer documentation</a>.
         </p>
 
         <h2 class="header">About Cohorts</h2>
         <p>Student Explorer operates using a cohort model; students are assigned to advisors using cohorts so that
-            advisors can see all of their students in their "My Students" tab. <b>You do not need to have cohorts in
-            order to use Student Explorer</b> &#151; you can search for students individually using the search bar in
-            the upper right, or navigate to an individual student's page using the link under "Term Progress" in the LSA
-            Undergraduate Student Advising File. However, if you would like to set up a cohort to see all of your
-            students in one list, please follow the instructions in the
+            advisors can see all of their students in their <a href="/">"My Students" tab</a>. <b>You do not need to
+            have cohorts in order to use Student Explorer</b> &#151; you can search for students individually using the
+            search bar in the upper right, or navigate to an individual student's page using the link under "Term
+            Progress" in the LSA Undergraduate Student Advising File. However, if you would like to set up a cohort to
+            see all of your students in one list, please follow the instructions in the
             <a href="https://documentation.its.umich.edu/node/831">Student Explorer documentation</a>. <b>Cohorts are
             not connected to advisor assignments in Wolverine Access or the LSA Undergraduate Student Advising
             File.</b>
@@ -30,8 +30,8 @@
         <p>Student Explorer was started as a research project in 2011 led by Professor Stephanie Teasley and Dr. Steven
             Lonn in partnership with M-STEM Academies. LSA Technology Services, Academic Innovation, and ITS Teaching &
             Learning have contributed to the design, development, and management of the tool. Student Explorer is
-            currently run by ITS Teaching & Learning, and questions and comments can be directed to the team by
-            <a href="/feedback">submitting feedback</a>.
+            currently run by ITS Teaching & Learning, and <b>questions and comments can be directed to the team by
+            <a href="/feedback">submitting feedback</a>.</b>
         </p>
 
         <hr/>
