Adding Technical Information; adjusting header

--- a/student_explorer/templates/student_explorer/about.html
+++ b/student_explorer/templates/student_explorer/about.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <div class="container content">
-        <h2 class="header">About Student Explorer</h2>
+        <h1 class="header">About Student Explorer</h1>
         <p>Student Explorer is an early warning system that leverages Learning Management System data to <b>help
             academic advisors identify at-risk students.</b> It uses learning analytics techniques to create actionable
             intelligence that assists academic advisors in identifying students at risk of academic jeopardy in order to
@@ -35,6 +35,13 @@
         </p>
 
         <hr/>
+
+        <h2 class="header">Technical Information</h2>
+        <p>The <a href="https://github.com/tl-its-umich-edu/student_explorer">GitHub repository</a> for Student Explorer
+            is public. View <a href="https://github.com/tl-its-umich-edu/student_explorer/releases">release notes</a>
+            for Student Explorer.
+        </p>
+
         <p>Build Name:
             <strong>{{ build_name }}</strong>
         </p>
