Changing h2 element classes to list-header on About page

--- a/student_explorer/templates/student_explorer/about.html
+++ b/student_explorer/templates/student_explorer/about.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <div class="container content">
-        <h1 class="header">About Student Explorer</h1>
+        <h1 class="sub-header">About Student Explorer</h1>
         <p>Student Explorer is an early warning system that leverages Learning Management System data to <b>help
             academic advisors identify at-risk students.</b> It uses learning analytics techniques to create actionable
             intelligence that assists academic advisors in identifying students at risk of academic jeopardy in order to
@@ -14,7 +14,7 @@
             <a href="https://documentation.its.umich.edu/node/831">Student Explorer documentation</a>.
         </p>
 
-        <h2 class="header">About Cohorts</h2>
+        <h2 class="list-header">About Cohorts</h2>
         <p>Student Explorer operates using a cohort model; students are assigned to advisors using cohorts so that
             advisors can see all of their students in their <a href="/">"My Students" tab</a>. <b>You do not need to
             have cohorts in order to use Student Explorer</b> &#151; you can search for students individually using the
@@ -26,7 +26,7 @@
             File.</b>
         </p>
 
-        <h2 class="header">Student Explorer History</h2>
+        <h2 class="list-header">Student Explorer History</h2>
         <p>Student Explorer was started as a research project in 2011 led by Professor Stephanie Teasley and Dr. Steven
             Lonn in partnership with M-STEM Academies. LSA Technology Services, Academic Innovation, and ITS Teaching &
             Learning have contributed to the design, development, and management of the tool. Student Explorer is
@@ -36,7 +36,7 @@
 
         <hr/>
 
-        <h2 class="header">Technical Information</h2>
+        <h2 class="list-header">Technical Information</h2>
         <p>The <a href="https://github.com/tl-its-umich-edu/student_explorer">GitHub repository</a> for Student Explorer
             is public. View <a href="https://github.com/tl-its-umich-edu/student_explorer/releases">release notes</a>
             for Student Explorer.
