--- a/student_explorer/templates/student_explorer/about.html
+++ b/student_explorer/templates/student_explorer/about.html
@@ -3,8 +3,45 @@
 {% block content %}
     <div class="container content">
         <h1 class="sub-header">About Student Explorer</h1>
-        <p>Student Explorer is an early warning system that leverages Learning Management System data to help academic advisors identify at-risk students. (<a href="http://digitaleducation.umich.edu/dei/student-explorer/" target="_blank">more info</a>)</p>
+        <p>Student Explorer is an early warning system that leverages Learning Management System data to <b>help
+            academic advisors identify at-risk students.</b> It uses learning analytics techniques to create actionable
+            intelligence that assists academic advisors in identifying students at risk of academic jeopardy in order to
+            facilitate outreach to these students. The tool helps advisors create timely interventions to direct
+            students toward resources or behavioral changes that help facilitate future student success. Student
+            Explorer is available to <b>all academic advisors at the U-M Ann Arbor campus upon request for access</b>
+            and includes information about <b>all students on the Ann Arbor campus, including graduate students.</b> For
+            more information about how Student Explorer works and how to use it, please refer to the
+            <a href="https://documentation.its.umich.edu/node/831">Student Explorer documentation</a>.
+        </p>
+
+        <h2 class="list-header">About Cohorts</h2>
+        <p>Student Explorer operates using a cohort model; students are assigned to advisors using cohorts so that
+            advisors can see all of their students in their <a href="/">"My Students" tab</a>. <b>You do not need to
+            have cohorts in order to use Student Explorer</b> &#151; you can search for students individually using the
+            search bar in the upper right, or navigate to an individual student's page using the link under "Term
+            Progress" in the LSA Undergraduate Student Advising File. However, if you would like to set up a cohort to
+            see all of your students in one list, please follow the instructions in the
+            <a href="https://documentation.its.umich.edu/node/831">Student Explorer documentation</a>. <b>Cohorts are
+            not connected to advisor assignments in Wolverine Access or the LSA Undergraduate Student Advising
+            File.</b>
+        </p>
+
+        <h2 class="list-header">Student Explorer History</h2>
+        <p>Student Explorer was started as a research project in 2011 led by Professor Stephanie Teasley and Dr. Steven
+            Lonn in partnership with M-STEM Academies. LSA Technology Services, Academic Innovation, and ITS Teaching &
+            Learning have contributed to the design, development, and management of the tool. Student Explorer is
+            currently run by ITS Teaching & Learning, and <b>questions and comments can be directed to the team by
+            <a href="/feedback">submitting feedback</a>.</b>
+        </p>
+
         <hr/>
+
+        <h2 class="list-header">Technical Information</h2>
+        <p>The <a href="https://github.com/tl-its-umich-edu/student_explorer">GitHub repository</a> for Student Explorer
+            is public. View <a href="https://github.com/tl-its-umich-edu/student_explorer/releases">release notes</a>
+            for Student Explorer.
+        </p>
+
         <p>Build Name:
             <strong>{{ build_name }}</strong>
         </p>
