Changing the cache vary to the path (Discussion with Sam)

--- a/seumich/templates/seumich/student_list_partial.html
+++ b/seumich/templates/seumich/student_list_partial.html
@@ -1,7 +1,7 @@
 {% load filters %}
 {% load static from staticfiles %}
 {% load cache %}
-{% cache settings.CACHE_TTL student_list_partial advisor.username %}
+{% cache settings.CACHE_TTL student_list_partial request.get_full_path %}
 <script src='{% static 'seumich/sort_table.js' %}'></script>
 
 <h1 class="sub-header">{{ studentListHeader }}</h1>
