Add new template; update display logic

--- a/seumich/static/seumich/styles/main.scss
+++ b/seumich/static/seumich/styles/main.scss
@@ -728,3 +728,10 @@ svg {
 .content {
     margin-bottom: 100px;
 }
+.advisor-intro-text {
+    font-size: 18px;
+}
+.advisor-intro-column {
+    padding-top: 16px;
+    padding-bottom: 16px;
+}
