Move studentListHeader and hr tag back; add those to advisor_without_students

--- a/seumich/templates/seumich/advisor_without_students.html
+++ b/seumich/templates/seumich/advisor_without_students.html
@@ -1,4 +1,6 @@
 {% block content %}
+    <h1 class="sub-header">{{ studentListHeader }}</h1>
+    <hr class="main-no-margin-top"/>
     <h2 class="list-header">Welcome to Student Explorer!</h2>
     <p class="advisor-intro-lead-text">Student Explorer helps academic advisors identify academically at-risk
         students using Learning Management System data.
