--- a/seumich/templates/seumich/student_list_partial.html
+++ b/seumich/templates/seumich/student_list_partial.html
@@ -4,6 +4,8 @@
 {% cache settings.CACHE_TTL student_list_partial request.get_full_path %}
 <script src='{% static 'seumich/sort_table.js' %}'></script>
 
+<h1 class="sub-header">{{ studentListHeader }}</h1>
+<hr class="main-no-margin-top"/>
 <h2 class="list-header">Students</h2>
 
 <div class="table-responsive">
