Adding new template that appears for advisors with no students (#140) (#164)
* Add new template; update display logic

* Remove unused class; update lead-text name; remove unnecessary div

* Move studentListHeader and hr tag back; add those to advisor_without_students

* Simplify if condition; remove extra line

--- a/seumich/templates/seumich/advisor_detail.html
+++ b/seumich/templates/seumich/advisor_detail.html
@@ -3,7 +3,11 @@
 {% block content %}
     <div class="container content">
         {% if advisor %}
-            {% include 'seumich/student_list_partial.html' %}
+            {% if not students %}
+                {% include 'seumich/advisor_without_students.html' %}
+            {% else %}
+                {% include 'seumich/student_list_partial.html' %}
+            {% endif %}
         {% else %}
             <div class="panel panel-warning not-found">
                 <div class="panel-heading">
