Fixes #189 - Change href of about tab in navbar when advisor has no students

--- a/seumich/templates/seumich/advisor_without_students.html
+++ b/seumich/templates/seumich/advisor_without_students.html
@@ -26,7 +26,7 @@
         <div class="col-sm-4 advisor-intro-column">
             <i class="fa fa-info-circle fa-3x"></i>
             <h2 class="list-header" style="margin-top: 20px">Learn more</h2>
-            <p>Visit our <a href="/about/">About page</a> to learn more about the purpose and history of Student
+            <p>Visit our <a href="{% url 'about' %}">About page</a> to learn more about the purpose and history of Student
                 Explorer, or visit <a href="https://documentation.its.umich.edu/node/831">Resources & Support</a>
                 for information on how to use Student Explorer.
             </p>
